Доработана функция post
Теперь запрашивает доп информацию у стороннего апи
